CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT ( PSO )

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(CUDA QUIET REQUIRED)
 
SET(PSO_EXECUTABLE PSO)

SET(PSO_SRCS
  ./src/main.cpp
  ./src/pso.cpp
)
SET(CUDA_PSO_SRCS_CU
  ./src/pso.cu
)

CUDA_ADD_EXECUTABLE(
  ${PSO_EXECUTABLE} 
  ${PSO_SRCS}
  ${CUDA_PSO_SRCS_CU}
)